[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rosbag-topic-compare"
authors = [{ name = "damienlarocque", email = "phicoltan@gmail.com" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/IamPhytan/rosbag-topic-compare"
GitHub = "https://github.com/IamPhytan/rosbag-topic-compare"
GitLab = "https://gitlab.com/damienlarocque/rosbag-topic-compare"

[project.scripts]
rosbag-topic-compare = "rosbag_topic_compare.__main__:main"

[tool.flit.module]
name = "rosbag_topic_compare"

[tool.isort]
profile = "black"

[tool.black]
line-length = 90

[tool.pylint]
[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "90"
